# CBSH2-Adapter

./: CMakeLists.txt
example/: cbsh_test.cpp
include/CBSH2/: HLHeuristic.cpp  HLHeuristic.h  HTable.h  ICBSNode.cpp  ICBSNode.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  MDD.cpp  MDD.h  RectangleReasoning.cpp  RectangleReasoning.h  SingleAgentICBS.cpp  SingleAgentICBS.h  agents_loader.cpp  agents_loader.h  common.cpp  common.h  compute_heuristic.cpp  compute_heuristic.h  map_loader.cpp  map_loader.h
